welcome.lessons.welcome.traversal.Snake.scala.code
def fin() : Boolean = {
  if(estFaceMur()) {
    gauche()
    if(estFaceMur()) {
      droite()
      return true
    }
    else {
      droite()
      return false
    }
  }
  else {
    return false
  }
}

override def run() {
  baisseBrosse()
  setCouleurBrosse(Black)
  while(!fin()) {
    var compteur = 0
    if(estFaceMur()) {
      if(compteur%2==0) {
        gauche(); avance(); gauche(); avance()
        compteur = compteur + 1
      }
      else {
        droite(); avance(); droite(); avance()
        compteur = compteur + 1
      }
    }
    else {
      avance()
    }
  }
}